--- a/css/style.css
+++ b/css/style.css
@@ -1,53 +1,29 @@
-a {
-/*     text-decoration:none; */
-    color: black;
-}
 
-body{
-    background-color: white;
+body { /* Centers page-container */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
 }
-.pageContainer{
-    color: #444;
+
+.page-container { /* All of content Container  */
+    max-width: 1366px;
+}
+.header{
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+  
+}
+
+
+
+/*     color: #444;
     letter-spacing: 1px;
     font-weight: 400;
     display:flex;
     flex-direction: column;
-    align-items: center;
-/*     border: 1px solid green */
-}
-
-.home{
-    flex-direction: row;
-} 
-.navbar {
-    width: 900px;
-    line-height: 0.1;
-    border-bottom: 1px solid black;
-    border-top: 1px solid black;
-}
-
-.navlinks {
-    display: flex;
-    justify-content: space-around;
-    list-style-type: none;
-    text-decoration:none;
-    //@font-face
-}
-
-
-
-
-.header{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.content{
-    width: 900px; 
-/*     border: 1px solid red; */
-}
+    align-items: center; */
 
 .post{
     display: flex;
