--- a/css/header.css
+++ b/css/header.css
@@ -15,34 +15,44 @@ a {   /* Remove default link styling */
 
 .navbar {
     width: 100%;
-    line-height: 0.1;
+ /*    line-height: 0.1; */
     border-bottom: 1px solid black;
     border-top: 1px solid black;
+    
 }
 
 .navbar ul li:hover > .sub-menu {
     display: flex;
- 
+
 } 
+
+.navlinks { 
+    border: 1px solid red;
+    padding: 10px;
+}
+
 
 .sub-menu { 
     display: none;
     position: absolute;
-    margin-top: 1rem;
     flex-direction: column; 
     padding: 0;
+    margin: 0;
+    border: 1px solid #ccc;
+
 }
 
 .sub-menu:hover {
     display: flex;
+    transition-delay:1.5s;
+    
 }
 .sub-menu li{
-
     padding: 10px;
     padding-left: 0;
     padding-right: 0;
     border-bottom: 1px dotted #ccc;
-    transition-duration: 0.5s;
+   
 }
 
 .sub-menu li:hover {
