--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@ body { /* Centers page-container */
     font-family: "Coustard", Georgia, serif;
 }
 
-.page-container { /* All of content on page container  */
+.page-wrapper { /* All of content on page container  */
     display: flex;
     flex-direction: column;
     align-items: center; 
@@ -24,7 +24,6 @@ body { /* Centers page-container */
     padding: 1.25em 0 2.5em 0;
     color: black;
     line-height: 1.4;
-    
     letter-spacing: 2px;
 }
 
@@ -46,7 +45,7 @@ body { /* Centers page-container */
     justify-content: center;
     align-items: center;
     width: 50%;
-    font-size: 1.2rem;
+    font-size: 1.05rem;
     line-height: 1.2;
 }
 
