--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,7 @@ body { /* Centers page-container */
     align-items: center; 
     justify-content: center;
     /* max-width: 1366px; */
+    min-height: 30vh;
     width: 100%;
     padding: 1.25em 0 2.5em 0;
     color: black;
