--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,22 @@
 
 body { /* Centers page-container */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     font-family: "Coustard", Georgia, serif;
     min-height: 100vh; /* Ensure the body takes at least the viewport height */
     margin: 0; /* Reset default margin to ensure full width */
 }
 
+.page-container{
+    display: flex;
+    justify-content: center;
+  
+}
+
 .blog-container {
-    max-width: 1366px; 
+    max-width: 1366px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center;
 }
 
 .post{
@@ -18,12 +24,11 @@ body { /* Centers page-container */
     flex-direction: column;
     align-items: center; 
     justify-content: center;
-    /* max-width: 1366px; */
     min-height: 30vh;
     width: 100%;
     padding: 1.25em 0 2.5em 0;
     color: black;
-    line-height: 1.4;
+
     letter-spacing: 2px;
 }
 
@@ -37,21 +42,20 @@ body { /* Centers page-container */
 .title:hover {
     background: #ccc;
 }
-.post-details {
+.post-date-category {
     font-size: 0.8rem;
 }
 .post-description {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
+    border: 2px solid red;
     font-size: 1.05rem;
     line-height: 1.2;
+    max-width: 900px;
+    min-width: 100px; //
+    min-height: 4vh;
+    max-height: 50vh;
 }
 
 .continueButton{
-
     text-align: center; 
     padding: 1rem 2.5rem 0.5rem 2.5rem;
     color: #444;
