--- a/css/header.css
+++ b/css/header.css
@@ -23,6 +23,7 @@ a {   /* Remove default link styling */
     box-shadow: inset 0 0 12px rgba(0,0,0,5%);
     color: #333;
     font-family: "Coustard", Georgia, serif;
+    padding-bottom: 2rem;
 }
 
 .navbar ul li:hover > .sub-menu { /* Dropdown menu on hover of a li */
