--- a/css/index.css
+++ b/css/index.css
@@ -11,18 +11,22 @@ body { /* Centers main-container */
 
 .main-container{ 
     display: flex;
-    justify-content: center;
-    flex-direction: column; 
-    
-    max-width: 1366px;
-
+    flex-direction: column;
+    align-items: center; 
+    width: 1366px;
+    padding: 1.25em 0 2.5em 0;
+    min-height: 80vh;
+    color: black;
+    line-height: 1.4;
+    letter-spacing: 2px;
 }
 
-.blog-container {
+.page-container {
     display: flex;
     flex-direction: column;
     align-items: center; 
     justify-content: center;
+    width: 100%;
 }
 
 .post{
@@ -34,15 +38,11 @@ body { /* Centers main-container */
     width: 100%;
     padding: 1.25em 0 2.5em 0;
     color: black;
-
     letter-spacing: 2px;
 }
 
 .title {
-    font-size: 1.9rem;
-    margin: 0;
-    padding: 0;
-    width: max-content;
+    font-size: 2rem;
 }
 
 .title:hover {
