--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,24 +1,47 @@
-.portfolio-container{
+
+/* .portfolio-container{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 1366px;
+    padding: 1.25em 0 2.5em 0;
+    min-height: 80vh;
+    color: black;
+    line-height: 1.4;
+    letter-spacing: 2px;
 }
+ */
 .project-category-container {
     display: flex;
     justify-content: center; 
-    width: 100%;
-    border: 1px solid red;
 } 
 
 .project-grid-container {
-  
-    max-width: 100%;
-    border: 1px solid red;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr) ) ;
+    background-color: #fff;
+    width: 100%;
+    grid-gap: 6px;
 }
 
-.thumbnail-container{
+.thumbnail-container {
+    width: 100%; /* This makes the image fill the grid child's width */
+    height: 0; /* Start with zero height to maintain aspect ratio */
+    padding-bottom: 100%; /* This creates a space based on a 1:1 aspect ratio */
+    position: relative; /* Establish relative positioning for absolute positioning */
+ }
 
+.thumbnail-img {
+    position: absolute; /* Position the image within the grid child */
+    top: 0; /* Align the image to the top of the container */
+    left: 0; /* Align the image to the left of the container */
+    width: 100%; /* Make the image fill the grid child's width */
+    height: 100%; /* Make the image fill the grid child's height */
+    object-fit: cover; /* Maintain the image's aspect ratio and cover the container */
+}
 
+.thumbnail-container:first-child {
+    grid-column: span 2; /* Make the first item span 2 columns */
+    grid-row: span 2; /* Make the first item span 2 rows */
 }
