layout , slogan, border bottom of header, and more

--- a/css/header.css
+++ b/css/header.css
@@ -8,22 +8,50 @@ a {   /* Remove default link styling */
 }
 
 .header { /* header area with which includes title/ and navbar */
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 1366px;
+    padding: 5rem;
 }
 
-.main-logo-title {
+.title-slogan-container {
+
+}
+
+.header-title-container {
+    color rgb(68, 68, 68);
     display: flex;
     justify-content: center;
+    font-family: UnifrakturMaguntia, Georgia, serif;
+    font-size: 4rem;
+
 }
 
+.header-title {
+    border-bottom: 1px dotted rgb(204,204,204);
+    margin: 0;
+    padding: 0;
+}
+
+.header-slogan {
+    display: flex;
+    justify-content: center;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    color: rgb(68, 68, 68);
+    font-family: Coustard, Georgia, serif;
+    font-size: 12.8px;
+}
 .navbar { /* navbar  */
-    width: 100%;
+    display: flex;
+    justify-content: space-around;
     border-top: 1px solid #f0f0f0;
     border-bottom: 1px solid #f0f0f0;
     box-shadow: inset 0 0 12px rgba(0,0,0,5%);
+    line-height: 2rem;
     color: #333;
-    font-family: "Coustard", Georgia, serif;
-    padding-bottom: 2rem;
+    font-family: Coustard, Georgia, serif;
 }
 
 .navbar ul li:hover > .sub-menu { /* Dropdown menu on hover of a li */
@@ -33,6 +61,8 @@ a {   /* Remove default link styling */
 .navlinks {  /* class added to navbar ul elements in functions.php */
     display: flex;
     justify-content: space-around;
+    align-content: center;
+    width: 100%;
 }
 
 .sub-menu { /* Layout of dropdown menu for navbar */
