--- a/css/index.css
+++ b/css/index.css
@@ -29,7 +29,7 @@ body { /* Centers main-container */
     width: 100%;
 }
 
-.post{
+.post-container{
     display: flex;
     flex-direction: column;
     align-items: center; 
