--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 /*
-	Theme Name: minimal site
-	Author: Chris Timbol yes
+* Theme Name: Minimalistic
+* Author: Chris Timbol
+* Text Domain: minimal-text-domain
+* Author URI: http://timbol.dev
+* Description: A description of your theme
 */
-
