--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,11 @@
 .site-footer {
     border-top: 1px solid #ccc;
     width: 100%;
+    max-width: 1366px;
     text-align: center;
     padding: 1rem;
+}
+
+.footer-container{ 
+  
 }
