--- a/css/header.css
+++ b/css/header.css
@@ -45,8 +45,6 @@ a {   /* Remove default link styling */
     font-size: 12.8px;
 }
 .navbar { /* navbar  */
-    display: flex;
-    justify-content: space-around;
     border-top: 1px solid #f0f0f0;
     border-bottom: 1px solid #f0f0f0;
     box-shadow: inset 0 0 12px rgba(0,0,0,5%);
@@ -55,16 +53,18 @@ a {   /* Remove default link styling */
     font-family: Coustard, Georgia, serif;
 }
 
+.search-container{
+    display: flex;
+}
 .navbar ul li:hover > .sub-menu { /* Dropdown menu on hover of a li */
     display: flex;
-    
+    border-bottom: 1px solid #f0f0f0;
 } 
 
 .navbar ul li a:hover { /* Dropdown menu on hover of a li */
-    border-bottom: 1px dotted rgb(51,51,51);
-    line-height: 23.04px;
-
-    
+/*     border-bottom: 1px solid #f0f0f0; 
+    box-shadow: inset 0 0 12px rgba(0,0,0,5%); */
+ 
 } 
 
 .navlinks {  /* class added to navbar ul elements in functions.php */
