--- a/css/header.css
+++ b/css/header.css
@@ -15,6 +15,16 @@ a {   /* Remove default link styling */
     padding: 5rem;
 }
 
+.main-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    max-width: 1366px; /* Set a maximum width */
+    line-height: 1.4;
+    letter-spacing: 2px;
+}
+
 .title-slogan-container {
 
 }
