--- a/css/index.css
+++ b/css/index.css
@@ -9,38 +9,50 @@ body {
 }
 
 .main-container,
-.page-container,
+.blog-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 80vh;
+    width: 100%;
+    max-width: 1366px; /* Set a maximum width */
+.date-category a:hover {
+    text-decoration: underline;
+}
+}
+
 .post-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
-    max-width: 1366px; /* Set a maximum width */
-    padding: 1.25em 0 2.5em 0;
-    color: black;
     line-height: 1.4;
     letter-spacing: 2px;
 }
 
-.main-container {
-    min-height: 80vh;
+.post-header,
+.archive-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
-.post-container {
-    min-height: 30vh;
-}
-
-.title {
+.title,
+.archive-title {
     font-size: 2rem;
+    width: fit-content; /* This will make the title only as wide as its content */
 }
 
+.date-category {
+    font-size: 0.8rem;
+    width: fit-content; /* This will make the date-category only as wide as its content */
+}
+.date-category a:hover {
+    text-decoration: underline;
+}
 .title:hover,
 .continueButton:hover {
     background: #ccc;
-}
-
-.post-date-category {
-    font-size: 0.8rem;
 }
 
 .post-description {
@@ -63,7 +75,9 @@ body {
 
 /* Responsive Design */
 @media (max-width: 1366px) {
-    .main-container {
-        padding: 1.25em 2em; /* Add horizontal padding for smaller screens */
+    .main-container,
+    .blog-container {
+        flex-direction: column; /* Stack elements vertically on smaller screens */
+        align-items: center; /* Center align items */
     }
 }
