--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -45,8 +45,8 @@
 }
 
 .thumbnail-container:first-child {
-    grid-column: span 2;
-    grid-row: span 2;
+/*     grid-column: span 2;
+    grid-row: span 2; */
 }
 
 /* Responsive Design for Larger Screens */
