comment layout, refactoring css

--- a/css/comments.css
+++ b/css/comments.css
@@ -1,5 +1,6 @@
 .comments-container {
     border-top: 1px solid rgb(170, 170, 170);
+    
 }
 
 .comments-title{
@@ -7,4 +8,17 @@
     font-size: 16px;
     color: rgb(170,170,170);
     line-height: 23px;
+}
+
+.submit-button {
+    text-align: center;
+    padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+
+    font-weight: 400;
+/*     border-bottom: 1px dotted #ccc; */
+    letter-spacing: 2px;
+}
+
+.submit-button:hover {
+    background: #ccc;
 }
