--- a/css/search.css
+++ b/css/search.css
@@ -14,6 +14,10 @@
     margin-bottom: 30px;
     border-bottom: 1px solid #ccc;
     padding-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
 }
 
 .search-result-item h2 {
@@ -22,7 +26,7 @@
 }
 
 .search-result-item a {
-    color: #0073aa;
+    color: inherit;
     text-decoration: none;
 }
 
@@ -31,19 +35,18 @@
 }
 
 .read-more {
-    display: inline-block;
     margin-top: 10px;
     padding: 5px 10px;
-    border: 1px solid #0073aa;
-    color: #0073aa;
+    background: #ccc;
 }
+   
+
 
 .read-more:hover {
-    background-color: #0073aa;
-    color: #fff;
+    background: #ccc;
 }
 
 .no-results {
     font-style: italic;
-    color: #666;
+    color: #ccc;
 }
