--- a/css/header.css
+++ b/css/header.css
@@ -42,18 +42,18 @@ h1 {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 100%;
-    padding: 1rem 0;
+    width: 80%;
     margin: 0;
+    padding: 0.5rem;
     flex: 0 0 85%;
 }
 .site-sidebar-container {
-    flex: 0 0 15%;
-    padding: 1rem 0;
+    width: 20%;
+    padding: 0.5rem;
 }
 
 .site-nav-list-with-sidebar li:hover {
-    border-bottom: 1px solid gray;
+    border-bottom: 1px dotted  rgb(68, 68, 68);
 }
 
 .site-nav-list-no-sidebar {
@@ -101,22 +101,28 @@ h1 {
     border-bottom: 1px dotted #ccc;
     width: max-content;
 }
-
 .sub-menu li:hover { /* Layout of dropdown menu for navbar */
     cursor: pointer;
 }
-  
 .sub-menu li a{ /* Layout of dropdown menu for navbar */
     color: inherit;
 }
-.main-container {
+.main-wrapper {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    max-width: 1366px; /* Sets a maximum width of page */
+    width: 1366px;
+  
+}
+.main-container {
+    width: 80%; 
     line-height: 1.4;
     letter-spacing: 2px;
+
+}
+.main-sidebar {
+    width: 20%;
+    order: 2;
+    padding: 0rem; 
+
 }
 
 @media (max-width: 600px) {
