--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,5 +1,5 @@
 .portfolio-container {
-
+    width: 100%;
 }
 .portfolio-title {
     display: flex;
@@ -23,7 +23,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
     background-color: #fff;
-    //width: 100%;
+    width: 100%;
     padding: 1rem;
     grid-gap: 16px; /* Increase gap for better visual separation */
 }
