--- a/css/archive.css
+++ b/css/archive.css
@@ -1,11 +1,13 @@
-.archive-header{
-
+.archive-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
-
 .archive-title {
-    
+    font-size: 2rem;
+    width: fit-content; /* This will make the title only as wide as its content */
 }
-
 .archive-permalink { /* The excerpt ... at the end of 55 words, located in  archive search results */
     text-decoration: underline;
 }
