--- a/css/search.css
+++ b/css/search.css
@@ -1,52 +1,4 @@
-.search-results-container {
-    max-width: 900px;
-    margin: 0 auto;
-    padding: 20px;
-}
-
 .search-title {
-    font-size: 24px;
-    margin-bottom: 20px;
-    color: #333;
+    font-size: 1.5rem;
 }
 
-.search-result-item {
-    margin-bottom: 30px;
-    border-bottom: 1px solid #ccc;
-    padding-bottom: 20px;
-    display: flex;
-    flex-direction: column;
-
-    align-items: center;
-}
-
-.search-result-item h2 {
-    font-size: 20px;
-    margin-bottom: 10px;
-}
-
-.search-result-item a {
-    color: inherit;
-    text-decoration: none;
-}
-
-.search-result-item a:hover {
-    text-decoration: underline;
-}
-
-.read-more {
-    margin-top: 10px;
-    padding: 5px 10px;
-    background: #ccc;
-}
-   
-
-
-.read-more:hover {
-    background: #ccc;
-}
-
-.no-results {
-    font-style: italic;
-    color: #ccc;
-}
