--- a/css/page.css
+++ b/css/page.css
@@ -2,10 +2,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    line-height: 1.4;
+
     width: 1366px;
     letter-spacing: 2px;
+    min-height: 75vh;
 }
 .page-header {
     width: 100%;
