--- a/css/header.css
+++ b/css/header.css
@@ -7,17 +7,19 @@ h1 {
     flex-direction: column;
     justify-content: center; 
     align-items: center;
-    padding: 3rem;
     width: 1366px;
+    padding: 0;
+    margin: 0;
 }
 .site-title { /* title spacing */
     font-family: UnifrakturMaguntia, Georgia, serif;
-    border-bottom: 1px dotted rgb(204,204,204);
+    border-bottom: 1px dotted #ccc;
     margin: 1rem;
 }
 .site-title a {  /* title color/font*/
     color: rgb(68, 68, 68); 
     text-decoration: none;
+    
 }
 .site-description { /* The description below title */
     color: rgb(68, 68, 68);
@@ -32,68 +34,38 @@ h1 {
     font-family: Coustard, Georgia, serif;
     width: 100%;
     color: #333;
-
 }
-
 .site-nav-list {
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    margin: 0.5rem;
-    padding: 0.5rem;
-}
-
-.site-nav-list {
-    text-decoration: none; 
-    list-style: none;
-    color: inherit;
+    padding: 0;
+    margin: 0;
 }
 .site-nav-list li {
     text-decoration: none; 
     list-style: none;
     color: inherit;
+    padding: 1rem;
+    margin: 0;
 }
 .site-nav-list li a{
+    padding: 1rem;
     text-decoration: none; 
     list-style: none;
     color: inherit;
 }
-/* .site-nav-list-with-sidebar {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 80%;
-    margin: 0;
-    padding: 0.5rem;
-    flex: 0 0 85%;
-} */
-/* .searchbar-container {
-    width: 20%;
-}
- */
- .site-nav-list li:hover {
-    text-decoration: rgb(68,68,68) underline dotted;
+.site-nav-list li:hover {
+    background-color: #f0f0f0;
 } 
-
-.site-nav-list-no-sidebar {
+.site-navigation ul li:hover > .sub-menu { /* Dropdown menu on hover of a li */
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    padding: 0; 
-    margin: 0; 
-    flex: 0 0 100%;
-}
-
-.navbar ul li:hover > .sub-menu { /* Dropdown menu on hover of a li */
-/*     display: flex;
-    border-bottom: 1px solid #f0f0f0; */
+    border-bottom: 1px solid #f0f0f0; 
 } 
-
-.navbar ul li a:hover { /* Dropdown menu on hover of a li */
-/*     border-bottom: 1px solid #f0f0f0; 
-    box-shadow: inset 0 0 12px rgba(0,0,0,5%); */
+.site-navigationul li a:hover { /* Dropdown menu on hover of a li */
+    border-bottom: 1px solid #f0f0f0; 
+    box-shadow: inset 0 0 12px rgba(0,0,0,5%); 
  
 } 
 .sub-menu { /* Layout of dropdown menu for navbar */
@@ -101,10 +73,8 @@ h1 {
     position: absolute;
     flex-direction: column; 
     padding: 0;
-    border: 1px solid #ccc;
+    margin: 0;
     z-index: 2;
-    background: white;
-    width: max-content;
     font-size: 0.8rem;
 }
 .sub-menu:hover { /* Layout of dropdown menu for navbar */
@@ -112,14 +82,11 @@ h1 {
     transition-delay:1.5s;
 }
 .sub-menu li{ /* Layout of dropdown menu for navbar */
-    margin: 0 0.25rem;
-    padding: 10px;
-    z-index: 2;
+    width: 100%;
+    padding: 0.5rem;
+
+    border: 1px solid #ccc;
     background: white;
-    padding-left: 0;
-    padding-right: 0;
-    border-bottom: 1px dotted #ccc;
-    width: max-content;
 }
 .sub-menu li:hover { /* Layout of dropdown menu for navbar */
     cursor: pointer;
@@ -127,8 +94,6 @@ h1 {
 .sub-menu li a{ /* Layout of dropdown menu for navbar */
     color: inherit;
 }
-
-
 @media (max-width: 600px) {
     html {
         font-size: 14px; /* 1rem = 14px on small screens */
