--- a/css/footer.css
+++ b/css/footer.css
@@ -1,13 +1,29 @@
-
-
 .site-footer {
-    border-top: 1px solid #ccc;
-    width: 100%;
-    max-width: 1366px;
-    text-align: center;
-    padding: 1rem;
+    width: 1366px;
+
+    height: 240px;
+    border: 1px solid red
+    box-sizing: border-box;
 }
 
-.footer-container{ 
-  
+
+.footer-menu {
+    border: 1px solid red;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+    max-height: 100%;
+    max-width: 100%;
+}
+
+.footer-menu li {
+    list-style: none;
+}
+
+.footer-menu li:hover {
+    text-decoration: underline;
+    background-color: #ccc;
 }
