--- a/css/index.css
+++ b/css/index.css
@@ -2,9 +2,12 @@ a {
     text-decoration: none;
     color: inherit;
 }
+
 body {
     font-family: "Coustard", Georgia, serif;
     display: flex;
+    margin: 0;
+    padding: 0;
     flex-direction: column;
     align-items: center;
     box-sizing: border-box;
