--- a/css/header.css
+++ b/css/header.css
@@ -2,9 +2,6 @@
 h1 {
     font-size: 4.4rem;
 }
-.site-container { /* Located at bottom of header.php */
-    width: 1366px;  
-}   
 .site-header { /* header area with which includes title/ and navbar */
     display: flex;
     flex-direction: column;
@@ -18,6 +15,7 @@ h1 {
     font-family: UnifrakturMaguntia, Georgia, serif;
     border-bottom: 1px dotted #ccc;
     margin: 1rem;
+
 }
 .site-title a {  /* title color/font*/
     color: rgb(68, 68, 68); 
@@ -26,6 +24,7 @@ h1 {
 .site-description { /* The description below title */
     color: rgb(68, 68, 68);
     font-size: 0.8rem;
+    
 }
 .site-navigation { 
     display: flex;
@@ -42,19 +41,17 @@ h1 {
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    padding: 0;
+    padding: 0.5rem;
     margin: 0;
 }
 .site-nav-list li {
-    
     text-decoration: none; 
     list-style: none;
     color: inherit;
-    padding: 1rem;
+    padding: 0.5rem;
     margin: 0;
 }
 .site-nav-list li a{
-    padding: 1rem;
     text-decoration: none; 
     list-style: none;
     color: inherit;
@@ -97,8 +94,65 @@ h1 {
 .sub-menu li a{ /* Layout of dropdown menu for navbar */
     color: inherit;
 }
-@media (max-width: 600px) {
+.hamburger-menu {
+    width: 2rem;
+    height: 1.5rem;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+}
+.hamburger-menu .bar {
+    width: 100%;
+    height: 3px;
+    background-color: #333;
+}
+/* Desktop styles */
+@media (min-width: 1025px) {
+    .site-container { /* Located at bottom of header.php */
+        width: 1366px;  
+    }   
+    .hamburger-menu {
+        display: none;
+    }
+}
+
+/* Tablets */
+@media (max-width: 1024px) {
     html {
-        font-size: 14px; /* 1rem = 14px on small screens */
+       // font-size: 14px; /* 1rem = 14px on small screens */
+    }
+    .site-container { /* Located at bottom of header.php */
+        width: 100vw;
+    }   
+    .site-navigation {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+    .site-nav-list {
+        display: none;
+        width: 100%; 
+        padding: 0;
+        margin: 0;
+    } 
+    .hamburger-menu {
+        display: flex;
+        padding: 0.5rem;
+    }
+    .site-nav-list li {
+        margin: 0;
+        padding: 0;
+        border-bottom: 1px solid #ccc;
+        width: 100%;  
+    }
+    .site-nav-list li a {
+        display: flex;
+        justify-content: center;
+        padding: 0.5rem;
+        width: 100%;
+        height: 100%;
     }
 }
