--- a/css/index.css
+++ b/css/index.css
@@ -4,22 +4,21 @@ a {
 }
 body {
     font-family: "Coustard", Georgia, serif;
-    display: flex;
-    margin: 0;
-    padding: 0;
+    display: flex; 
     flex-direction: column;
     align-items: center;
     box-sizing: border-box;
-    line-height: 1.4;
+    margin: 0;
+    padding: 0;
 }
 .blog-container {
-    min-height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 .date-category a:hover {
     background: #f0f0f0;
+   
 }
 .post-container {
     display: flex;
@@ -36,12 +35,14 @@ body {
 }
 
 .title {
-    font-size: 2rem;
+   
     width: fit-content; /* This will make the title only as wide as its content */
+    margin-bottom: 0;
 }
 
 .date-category {
     font-size: 0.8rem;
+    margin: 0;
     width: fit-content; /* This will make the date-category only as wide as its content */
 }
 
@@ -63,4 +64,13 @@ body {
     font-weight: 400;
     border-bottom: 1px dotted #ccc;
     letter-spacing: 2px;
+}
+
+@media (min-width: 600px) and (max-width: 1024px) {
+    /* Adjust styles for tablet view here */
+}
+
+/* Desktop styles */
+@media (min-width: 1025px) {
+    /* Adjust styles for desktop view here */
 }
