--- a/css/footer.css
+++ b/css/footer.css
@@ -4,6 +4,7 @@
     align-items: center;
     width: 100%;
     height: 15rem;
+    border-top: 1px solid #ccc;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
