--- a/css/index.css
+++ b/css/index.css
@@ -45,9 +45,37 @@ body {
 }
 .continueButton:hover {
     background: #f0f0f0;
+    transition: background-color 0.3s;
 }
 .post-description {
 }
+
+/* Pagination styles */
+.pagination {
+    display: flex;
+    justify-content: center;
+    padding: 1rem;
+}
+.page-numbers {
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    margin-right: 5px;
+    text-decoration: none;
+    color: #333;
+    transition: background-color 0.3s;
+}
+
+.page-numbers:hover {
+    background-color: #f5f5f5;
+}
+
+/* Highlight the current page number */
+.page-numbers.current {
+    background-color: #0073aa; /* Example color, adjust as needed */
+    color: #fff;
+    border-color: #0073aa;
+}
+
 .continueButton {
     text-align: center;
     padding: 1rem 2.5rem 0.5rem 2.5rem;
